Ajuste doc swagger